--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       <h1 class="homework-title text-center">Homework</h1>
       <ol id="list" class="homework-list">
         <li>
-          Closures:
+          Closures
           <ul>
             <li>
               <a
                 href="https://alexkolotukhina.github.io/closures-01/"
                 class="homework-list__item"
+                target="_blank"
                 >Task 01</a
               >
             </li>
@@ -27,6 +28,7 @@
               <a
                 href="https://alexkolotukhina.github.io/closures-02/"
                 class="homework-list__item"
+                target="_blank"
                 >Task 02</a
               >
             </li>
