--- a/closures-01/index.html
+++ b/closures-01/index.html
@@ -10,6 +10,9 @@
       crossorigin="anonymous"
     />
     <style>
+      h3 {
+        margin-bottom: 15px;
+      }
       li {
         font-size: 22px;
       }
@@ -23,7 +26,18 @@
       <h1 class="mb-5 text-center">Work 1</h1>
       <div class="row">
         <div class="col-sm-3">
-          <ul id="list" class="list-group">
+          <h3>VAR</h3>
+          <ul id="list-var" class="list-group">
+            <li class="list-group-item text-center">1</li>
+            <li class="list-group-item text-center">2</li>
+            <li class="list-group-item text-center">3</li>
+            <li class="list-group-item text-center">4</li>
+            <li class="list-group-item text-center">5</li>
+          </ul>
+        </div>
+        <div class="col-sm-3">
+          <h3>LET</h3>
+          <ul id="list-let" class="list-group">
             <li class="list-group-item text-center">1</li>
             <li class="list-group-item text-center">2</li>
             <li class="list-group-item text-center">3</li>
