--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
                 >Task 02</a
               >
             </li>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/closures-03/"
+                class="homework-list__item"
+                target="_blank"
+                >Task 03</a
+              >
+            </li>
           </ul>
         </li>
       </ol>
