Add repo link to main menu.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <body>
     <div class="container">
       <h1 class="homework-title text-center">Homework</h1>
+      <h2>
+        <a
+          class="repository-link"
+          href="https://github.com/alexkolotukhina/alexkolotukhina.github.io"
+          target="_blank"
+          >Repository</a
+        >
+      </h2>
       <ol id="list" class="homework-list">
         <li>
           Closures
