--- a/index.html
+++ b/index.html
@@ -50,6 +50,43 @@
             </li>
           </ul>
         </li>
+        <li>
+          Regular Expressions
+          <ul>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/regular-01/"
+                class="homework-list__item"
+                target="_blank"
+                >Task 01</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/regular-02/"
+                class="homework-list__item"
+                target="_blank"
+                >Task 02</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/regular-03/"
+                class="homework-list__item"
+                target="_blank"
+                >Task 03</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/regular-04/"
+                class="homework-list__item"
+                target="_blank"
+                >Task 04</a
+              >
+            </li>
+          </ul>
+        </li>
       </ol>
     </div>
   </body>
