--- a/webpack/index.html
+++ b/webpack/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/dist/app.css" />
+    <link rel="stylesheet" href="dist/app.css" />
 
     <title>Play List</title>
   </head>
@@ -23,6 +23,6 @@
       </div>
     </section>
 
-    <script src="/dist/app.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
