Add new item in main menu.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
         </li>
         <li>
-          Regular Expressions
+          RegExr
           <ul>
             <li>
               <a
@@ -83,6 +83,19 @@
                 class="homework-list__item"
                 target="_blank"
                 >Task 04</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          Webpack
+          <ul>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/webpack/"
+                class="homework-list__item"
+                target="_blank"
+                >Task 01</a
               >
             </li>
           </ul>
