Add inline style on main menu.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 href="https://alexkolotukhina.github.io/regular-04/"
                 class="homework-list__item"
                 target="_blank"
+                style="text-decoration: line-through;"
                 >Task 04</a
               >
             </li>
