Add item to amin menu.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
             </li>
           </ul>
         </li>
+        <li>
+          OOP
+          <ul>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/playlist/"
+                class="homework-list__item"
+                target="_blank"
+                >PlayList</a
+              >
+            </li>
+          </ul>
+        </li>
       </ol>
     </div>
   </body>
