Add ne item in menu.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
             </li>
           </ul>
         </li>
+        <li>
+          Async и await
+          <ul>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/asynchronous/"
+                class="homework-list__item"
+                target="_blank"
+                >Blog</a
+              >
+            </li>
+          </ul>
+        </li>
       </ol>
     </div>
   </body>
