Add React hooks and link in main file.

--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
             </li>
           </ul>
         </li>
+        <li>
+          Hooks
+          <ul>
+            <li>
+              <a
+                href="https://alexkolotukhina.github.io/hooks/public"
+                class="homework-list__item"
+                target="_blank"
+                >React hooks</a
+              >
+            </li>
+          </ul>
+        </li>
       </ol>
     </div>
   </body>
