Hooks run build.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <ul>
             <li>
               <a
-                href="https://alexkolotukhina.github.io/hooks/public"
+                href="https://alexkolotukhina.github.io/hooks/build"
                 class="homework-list__item"
                 target="_blank"
                 >React hooks</a
